2007-11-14  Johan Dahlin  <johan@gnome.org>

	* flumotion/common/python.py:
	Attempt to fix pychecker.
	(sorted): Okay, slice the first two items, <= doesn't work,
	only < and >.

2007-11-14  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/component.py
	(BaseComponentMedium.remote_getConfig): With trunk, components
	always have their config, no need for special cases.
	(BaseComponent.__init__): Remove obsolete comment from Feb 05.
	(BaseComponent.init, BaseComponent._pollCPU): Move the CPU poller
	to be a common.Poller.

2007-11-14  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/steps.py: 
	* flumotion/common/Makefile.am (flumotion_PYTHON): 
	* flumotion/common/python.py: New file, forward compatibility with
	python 2.4 and 2.5.

	* flumotion/wizard/steps.py (Consumption): More __nonzero__ cleanups,
	(Consumption.activated): Simplify logic and use the any() concept
	from python 2.5

	* data/glade/wizard_consumption.glade: Connect all shout checkbuttons
	to the signal, just as for disk/http.

	* flumotion/wizard/steps.py (Production): Clean up the production step
	a little, avoid some code duplication and depending on __nonzero__.

2007-11-14  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/multi.py (MultiAdminModel.addManager):
	* flumotion/admin/admin.py (AdminModel.__init__)
	(AdminModel.connectToManager, AdminModel.setRemoteReference): Add
	keyword argument to addManager/connnectToManager to control
	generation of the connection XML cache file.

	* flumotion/test/test_admin_admin.py
	(AdminTest.testConnectSuccess)
	(AdminTest.testReconnect, AdminTest.testConnectFailure): 
	* flumotion/test/test_admin_multi.py
	(MultiAdminTest.testConnectSuccess)
	(MultiAdminTest.testConnectFailure)
	(MultiAdminTest.testReconnect): Don't record manager connection
	details when connecting to test managers. Fixes tests adding to
	the recent connections box in the admin UI.

	* flumotion/manager/worker.py: Comments from 2004 la la la